[tool.poetry]
name = "timelapseapp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.1"

# GraphQL and REST api dependencies
graphene = "^2.1"
django-graphiql = "^0.4.4"
graphene-django = "^2.2"
django-filter = "^2.0"
django-crispy-forms = "^1.7"

# REST api
djangorestframework = "^3.8"
markdown = "^3.0"

# Image Manipulation
moviepy = "^0.2.3"
ExifRead = "^2.1"

# Django Modelling Extensions
django-denorm = "^1.0"
django-fsm = "^2.6"
django-extended-choices = "^1.3"
django-taggit = "^0.23.0"

# Django Channels
channels = "^2.1"
channels_redis = "^2.3"
Redis = "^2.10"

# Various Libraries
dateparser = "^0.7.0"
recurrent = "^0.2.5"
cryptography = "^2.3"
boto3 = "^1.9"
furl = "^1.2"
yurl = "^0.13.0"
purl = "^1.4"
django-click = "^2.1"

# Logging (Structured)
eliot = "^1.5"
eliot-tree = "^18.1"

# Development and Debug
ipython = "^7.0"
ipdb = "^0.11.0"

# Local Django-Addons
django-addons = {path = "/app/addons-dev/django-addons"}
django-addons-formlib = {path = "/app/addons-dev/django-addons-formlib"}
django-addon = {path = "/app/addons-dev/django-addon"}
django-celery-addon = {path = "/app/addons-dev/django-celery-addon"}

# Uncategorized

[tool.poetry.dev-dependencies]
